# Nano-VM-FDP

./: Dockerfile  README.md  alembic.ini  ci.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_01_01_0000_init_orders_and_trace.py
app/: __init__.py  config.py  database.py  main.py
app/admin/: __init__.py  router.py
app/domains/orders/: __init__.py  fsm.py  models.py  router.py  schemas.py  terminal_tools.py
app/fsm/: __init__.py
app/fsm/core/: __init__.py  base.py  registry.py
app/trace/: __init__.py  models.py  service.py
tests/: test_api.py  test_fsm.py
